--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class="area box2">Box 2</div>
             <div class="area box3">Box 3</div>
         </div>
+        <p id="storyBoard"></p>
     </div>
     <div class="ui">
         <input type="text" id="destination" placeholder="Type where you want to go">
