added flex wrap, but it doens't wrap how I want it to

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
             <div class="area box1">Box 1</div>
             <div class="area box2">Box 2</div>
             <div class="area box3">Box 3</div>
+            <div class="area box4">Box 4</div>
         </div>
         <p id="storyBoard"></p>
     </div>
     <div class="ui">
-        <input type="text" id="destination" placeholder="Type where you want to go">
-        <button id="areaSubmit">Enter Destination</button>
+        <input type="text" id="destination" placeholder="Type what you want to do">
+        <button id="areaSubmit">Enter Action</button>
     </div>
 </body>
 </html>
